--- a/src/app/layout/default-layout/default-header/default-header.component.scss
+++ b/src/app/layout/default-layout/default-header/default-header.component.scss
@@ -119,63 +119,136 @@ img.rounded-circle {
   color: #f3f4f7; /* Color del texto del título */
 }
 
+//
+//
+///* custom-modal.component.css */
+//.modal {
+//  display: flex;
+//  position: fixed;
+//  z-index: 1;
+//  left: 0;
+//  top: 0;
+//  width: 100%;
+//  height: 100%;
+//  overflow: auto;
+//  background-color: rgba(0, 0, 0, 0.4);
+//  justify-content: center;
+//  align-items: center;
+//}
+//
+//.modal-content {
+//  background-color: #fefefe;
+//  padding: 20px;
+//  border: 1px solid #888;
+//  width: 80%;
+//  max-width: 500px;
+//  border-radius: 10px;
+//  animation: animatetop 0.4s;
+//}
+//
+//@keyframes animatetop {
+//  from {top: -300px; opacity: 0}
+//  to {top: 0; opacity: 1}
+//}
+//
+//.close {
+//  color: #aaa;
+//  float: right;
+//  font-size: 28px;
+//  font-weight: bold;
+//}
+//
+//.close:hover,
+//.close:focus {
+//  color: black;
+//  text-decoration: none;
+//  cursor: pointer;
+//}
 
+//.modal-header {
+//  padding: 2px 16px;
+//  background-color: #f8d7da;
+//  color: #721c24;
+//}
+//
+//.modal-body {padding: 2px 16px;}
+//
+//.modal-footer {
+//  padding: 2px 16px;
+//  background-color: #f8d7da;
+//  color: #721c24;
+//  text-align: right;
+//}
 
-/* custom-modal.component.css */
 .modal {
-  display: flex;
+  display: block; /* Asegúrate de que el modal se muestre */
   position: fixed;
-  z-index: 1;
+  z-index: 1050;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
-  justify-content: center;
-  align-items: center;
+  overflow: hidden;
+  outline: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
 }
 
 .modal-content {
-  background-color: #fefefe;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  max-width: 500px;
-  border-radius: 10px;
-  animation: animatetop 0.4s;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 600px; /* Anchura máxima del modal */
+  margin: 1.75rem auto;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+  outline: 0;
+  padding: 1rem; /* Padding alrededor del contenido */
 }
 
-@keyframes animatetop {
-  from {top: -300px; opacity: 0}
-  to {top: 0; opacity: 1}
-}
-
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+.modal-header,
+.modal-body,
+.modal-footer {
+  padding: 1rem;
+  color:#212631;
 }
 
 .modal-header {
-  padding: 2px 16px;
-  background-color: #f8d7da;
-  color: #721c24;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #dee2e6;
+  background-color: #e55353;
 }
 
-.modal-body {padding: 2px 16px;}
+.modal-header h2 {
+  margin: 0;
+}
+
+.modal-body {
+  flex: 1 1 auto;
+}
 
 .modal-footer {
-  padding: 2px 16px;
-  background-color: #f8d7da;
-  color: #721c24;
-  text-align: right;
+  display: flex;
+  justify-content: flex-end;
+  border-top: 1px solid #dee2e6;
 }
+
+.close {
+  cursor: pointer;
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  line-height: 1;
+  color: #000;
+  opacity: 0.5;
+}
+
+.close:hover {
+  color: #000;
+  text-decoration: none;
+  opacity: 0.75;
+}
+
