--- a/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/app/layout/default-layout/default-header/default-header.component.html
@@ -55,9 +55,9 @@
     </c-header-nav>
 
   </c-container>
-  <c-container [fluid]="true" class="px-4">
-    <c-breadcrumb-router />
-  </c-container>
+<!--  <c-container [fluid]="true" class="px-4">-->
+<!--    <c-breadcrumb-router />-->
+<!--  </c-container>-->
 </ng-container>
 <!--</c-header>-->
 
@@ -76,7 +76,7 @@
     <ul cDropdownMenu class="pt-0 w-auto">
       <li>
         <h6 cDropdownHeader class="bg-body-secondary text-body-secondary fw-semibold py-2 rounded-top">
-          Account
+          Notificaciones
         </h6>
       </li>
       <li>
@@ -90,7 +90,7 @@
       <li >
         <a cDropdownItem class="pointer-cursor" routerLink="/perfil">
           <svg cIcon class="me-2" name="cilUser"></svg>
-          Profile
+          Perfil
         </a>
       </li>
 <!--        <a cDropdownItem routerLink="/apps/email/inbox">-->
@@ -117,7 +117,7 @@
 <!--      </li>-->
       <li>
         <h6 cDropdownHeader class="bg-body-secondary text-body-secondary fw-semibold py-2">
-          Settings
+          Salir
         </h6>
       </li>
       <li></li>
