--- a/src/app/views/perfil/perfil.component.html
+++ b/src/app/views/perfil/perfil.component.html
@@ -1,12 +1,35 @@
-<div class="d-flex align-items-center p-5" style="background-color: #f5f5f5; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); max-width: 80%; margin: auto;">
-  <img src="https://png.pngtree.com/png-clipart/20210915/ourlarge/pngtree-avatar-icon-abstract-user-login-icon-png-image_3917181.jpg" alt="Secretary" class="rounded-circle me-5" style="width: 150px; height: 150px;">
-  <div style="flex-grow: 1;">
-    <div class="mb-5">
-      <label class="form-label fs-2" style="color: #ff6600;">Mi Perfil</label>
-      <p class="fs-3 mb-3" style="color: #333;">{{sessionStorage.getItem('usuario')}}</p>
-      <p class="fs-3 mb-3" style="color: #333;">{{sessionStorage.getItem('cedula')}}</p>
-      <p class="fs-3 mb-3" style="color: #333;">{{sessionStorage.getItem('nombre')}}</p>
-      <p class="fs-3 mb-3" style="color: #333;">{{sessionStorage.getItem('apellido')}}</p>
+<div class="card border-0 shadow-sm" style="max-width: 80%; margin: auto;">
+  <div class="card-body">
+    <div class="row align-items-center">
+      <div class="col-md-4 text-center">
+        <img src="./assets/jedanklosin.ico" alt="Avatar" class="rounded-circle img-fluid" style="width: 250px; height: 250px; object-fit: cover;">
+      </div>
+      <div class="col-md-8">
+        <h2 class="text-primary mb-4">Mi Perfil</h2>
+        <hr>
+        <div class="mb-4">
+          <div class="row">
+            <div class="col-sm-6"><strong>Usuario:</strong></div>
+            <div class="col-sm-6 text-end">{{ sessionStorage.getItem('usuario') }}</div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-sm-6"><strong>Cédula:</strong></div>
+            <div class="col-sm-6 text-end">{{ sessionStorage.getItem('cedula') }}</div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-sm-6"><strong>Nombre:</strong></div>
+            <div class="col-sm-6 text-end">{{ sessionStorage.getItem('nombre') }}</div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-sm-6"><strong>Apellido:</strong></div>
+            <div class="col-sm-6 text-end">{{ sessionStorage.getItem('apellido') }}</div>
+          </div>
+          <hr>
+        </div>
+      </div>
     </div>
   </div>
 </div>
