--- a/src/app/views/alerta/alerta.component.html
+++ b/src/app/views/alerta/alerta.component.html
@@ -28,16 +28,6 @@
                 <button type="button" name="button"  class="btn btn-danger" (click)="mostrarDetalles(alert)">Detalles</button>
                 </td>
             </tr>
-<!--            <tr *ngIf="alertSeleccionado">-->
-<!--                <td [attr.colspan]="4">-->
-<!--                    <div class="detalles">-->
-<!--                        <p><strong>Dispositivo:</strong> {{alertSeleccionado.dispositivo.nombre}} - {{alertSeleccionado.dispositivo.modelo.nombre}} - {{alertSeleccionado.dispositivo.numSerie}} </p>-->
-<!--                        <p><strong>Descripción de Alerta:</strong> {{alertSeleccionado.descripcion}}</p>-->
-<!--                        <p><strong>Fecha de Alerta:</strong> {{alertSeleccionado.fecha.toString().split("T")[0]}} {{alertSeleccionado.fecha.toString().split("T")[1].split(".")[0]}}</p>-->
-<!--                        <button type="button" class="btn btn-secondary" (click)="cerrarDetalles()">Cerrar</button>-->
-<!--                      </div>-->
-<!--                </td>-->
-<!--            </tr>-->
             </tbody>
         </table>
       <div class="d-flex justify-content-center mt-3">
@@ -54,7 +44,7 @@
   <c-modal-body *ngIf="alertSeleccionado">
     <p><strong>Dispositivo:</strong> {{alertSeleccionado.dispositivo.nombre}} - {{alertSeleccionado.dispositivo.modelo.nombre}} - {{alertSeleccionado.dispositivo.numSerie}}</p>
     <p><strong>Descripción de Alerta:</strong> {{alertSeleccionado.descripcion}}</p>
-    <p><strong>Fecha de Alerta:</strong> {{alertSeleccionado.fecha.toString().split("T")[0]}} {{alertSeleccionado.fecha.toString().split("T")[1].split(".")[0]}}</p>
+    <p><strong>Fecha de Alerta:</strong>{{ alertSeleccionado.fecha ? alertSeleccionado.fecha.toString().split("T")[0]  : 'NA' }} {{ alertSeleccionado.fecha ? formatDate2(alertSeleccionado.fecha, 'HH:mm') : 'NA' }} </p>
   </c-modal-body>
   <c-modal-footer>
     <button type="button" class="btn btn-secondary" (click)="cerrarDetalles()">Cerrar</button>
