lo  de los sonidos
npm install --save-dev @types/howler

--- a/src/app/views/dispositivo/dispositivo.component.html
+++ b/src/app/views/dispositivo/dispositivo.component.html
@@ -71,6 +71,7 @@
                   <button type="button" class="btn btn-danger" (click)="eliminardispo(dispo)"> <svg cIcon name="cilTrash" size="lg"></svg></button>
                 </td>
               </tr>
+              <button (click)="playAlertSound()">Reproducir Sonido de Alerta</button>
             </tbody>
           </table>
           <div class="d-flex justify-content-center mt-3">
