--- a/src/app/layout/default-layout/default-header/default-header.component.scss
+++ b/src/app/layout/default-layout/default-header/default-header.component.scss
@@ -91,3 +91,20 @@ img.rounded-circle {
   z-index: 1050; /* O cualquier valor mayor que otros elementos en la página */
 }
 
+.notification-button {
+  position: relative;
+  padding: 0;
+  border: none;
+  background: none;
+}
+
+.notification-badge {
+  position: absolute;
+  top: -10px; /* Ajusta la posición superior */
+  right: -10px; /* Ajusta la posición derecha */
+  font-size: 0.6rem; /* Tamaño de fuente más pequeño */
+  padding: 0.2em 0.3em; /* Ajuste de padding para hacer el badge más pequeño */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
