--- a/src/app/views/prestamo/prestamo.component.html
+++ b/src/app/views/prestamo/prestamo.component.html
@@ -30,10 +30,16 @@
 </c-toaster>
 <div class="card">
   <div class="card-body">
-    <h5 class="card-title">Prestamos</h5>
-    <div class="button-container" *ngIf="!mostrarFormularioEditar">
-      <button id="guardar-prestamo" (click)="ingresarPrestamo()">Ingresar Prestamo</button>
+
+    <div style="display: flex; justify-content: space-between; align-items: center;">
+      <h5 class="card-title" style="margin-bottom: 0;">Préstamos</h5>
+      <div *ngIf="!mostrarFormularioEditar">
+        <button type="button" class="btn btn-outline-success bi bi-plus-circle" (click)="ingresarPrestamo()">
+          Ingresar Prestamo
+        </button>
+      </div>
     </div>
+
     <div *ngIf="mostrarFormularioIngreso && !mostrarFormularioEditar">
       <form [formGroup]="registerFormIn" (ngSubmit)="onSubmit2()">
         <h1>Ingresar Prestamo</h1>
