--- a/src/app/views/perfil/perfil.component.html
+++ b/src/app/views/perfil/perfil.component.html
@@ -9,22 +9,22 @@
         <hr>
         <div class="mb-4">
           <div class="row">
-            <div class="col-sm-6"><strong>Usuario:</strong></div>
+            <div class="col-sm-6"><strong>Usuario</strong></div>
             <div class="col-sm-6 text-end">{{ sessionStorage.getItem('usuario') }}</div>
           </div>
           <hr>
           <div class="row">
-            <div class="col-sm-6"><strong>Cédula:</strong></div>
+            <div class="col-sm-6"><strong>Cédula</strong></div>
             <div class="col-sm-6 text-end">{{ sessionStorage.getItem('cedula') }}</div>
           </div>
           <hr>
           <div class="row">
-            <div class="col-sm-6"><strong>Nombre:</strong></div>
+            <div class="col-sm-6"><strong>Nombre</strong></div>
             <div class="col-sm-6 text-end">{{ sessionStorage.getItem('nombre') }}</div>
           </div>
           <hr>
           <div class="row">
-            <div class="col-sm-6"><strong>Apellido:</strong></div>
+            <div class="col-sm-6"><strong>Apellido</strong></div>
             <div class="col-sm-6 text-end">{{ sessionStorage.getItem('apellido') }}</div>
           </div>
           <hr>
