--- a/src/app/views/perfil/perfil.component.html
+++ b/src/app/views/perfil/perfil.component.html
@@ -1,3 +1,38 @@
+<!--<div class="card border-0 shadow-sm" style="max-width: 80%; margin: auto;">-->
+<!--  <div class="card-body">-->
+<!--    <div class="row align-items-center">-->
+<!--      <div class="col-md-4 text-center">-->
+<!--        <img src="./assets/jedanklosin.ico" alt="Avatar" class="rounded-circle img-fluid" style="width: 250px; height: 250px; object-fit: cover;">-->
+<!--      </div>-->
+<!--      <div class="col-md-8">-->
+<!--        <h2 class="text-primary mb-4">Mi Perfil</h2>-->
+<!--        <hr>-->
+<!--        <div class="mb-4">-->
+<!--          <div class="row">-->
+<!--            <div class="col-sm-6"><strong>Usuario</strong></div>-->
+<!--            <div class="col-sm-6 text-end">{{ sessionStorage.getItem('usuario') }}</div>-->
+<!--          </div>-->
+<!--          <hr>-->
+<!--          <div class="row">-->
+<!--            <div class="col-sm-6"><strong>Cédula</strong></div>-->
+<!--            <div class="col-sm-6 text-end">{{ sessionStorage.getItem('cedula') }}</div>-->
+<!--          </div>-->
+<!--          <hr>-->
+<!--          <div class="row">-->
+<!--            <div class="col-sm-6"><strong>Nombre</strong></div>-->
+<!--            <div class="col-sm-6 text-end">{{ sessionStorage.getItem('nombre') }}</div>-->
+<!--          </div>-->
+<!--          <hr>-->
+<!--          <div class="row">-->
+<!--            <div class="col-sm-6"><strong>Apellido</strong></div>-->
+<!--            <div class="col-sm-6 text-end">{{ sessionStorage.getItem('apellido') }}</div>-->
+<!--          </div>-->
+<!--          <hr>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 <div class="card border-0 shadow-sm" style="max-width: 80%; margin: auto;">
   <div class="card-body">
     <div class="row align-items-center">
@@ -10,26 +45,56 @@
         <div class="mb-4">
           <div class="row">
             <div class="col-sm-6"><strong>Usuario</strong></div>
-            <div class="col-sm-6 text-end">{{ sessionStorage.getItem('usuario') }}</div>
+            <div class="col-sm-6 text-end">{{ usuario }}</div>
           </div>
           <hr>
           <div class="row">
             <div class="col-sm-6"><strong>Cédula</strong></div>
-            <div class="col-sm-6 text-end">{{ sessionStorage.getItem('cedula') }}</div>
+            <div class="col-sm-6 text-end">{{ cedula }}</div>
           </div>
           <hr>
           <div class="row">
             <div class="col-sm-6"><strong>Nombre</strong></div>
-            <div class="col-sm-6 text-end">{{ sessionStorage.getItem('nombre') }}</div>
+            <div class="col-sm-6 text-end">{{ nombre }}</div>
           </div>
           <hr>
           <div class="row">
             <div class="col-sm-6"><strong>Apellido</strong></div>
-            <div class="col-sm-6 text-end">{{ sessionStorage.getItem('apellido') }}</div>
+            <div class="col-sm-6 text-end">{{ apellido }}</div>
           </div>
           <hr>
+        </div>
+        <div class="text-center">
+          <button class="btn btn-primary" (click)="toggleEditProfile()">Editar Perfil</button>
+        </div>
+        <div *ngIf="isEditingProfile" class="mt-4">
+          <form (ngSubmit)="saveChanges()" [formGroup]="formUser">
+            <div class="mb-3">
+              <label for="cedula" class="form-label">Nueva Cedula</label>
+              <input type="text" class="form-control" id="cedula" name="cedula" placeholder="Ingrese nueva cedula" formControlName="cedula" required>
+              <div *ngIf="formUser.controls['cedula']?.invalid && formUser.controls['cedula']?.touched" class="invalid-feedback">
+                Debe ingresar la cedula.
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="username" class="form-label">Nuevo Usuario</label>
+              <input type="text" class="form-control" id="username" [(ngModel)]="newUsername" name="username" placeholder="Ingrese nuevo usuario" formControlName="username" required>
+              <div *ngIf="formUser.controls['username']?.invalid && formUser.controls['username']?.touched" class="invalid-feedback">
+                Debe ingresar el usuario.
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Nueva Contraseña</label>
+              <input type="password" class="form-control" id="password" [(ngModel)]="newPassword" name="password" placeholder="Ingrese nueva contraseña" formControlName="password" required>
+              <div *ngIf="formUser.controls['password']?.invalid && formUser.controls['password']?.touched" class="invalid-feedback">
+                Debe ingresar la contraseña.
+              </div>
+            </div>
+            <button type="submit" class="btn btn-success">Guardar Cambios</button>
+          </form>
         </div>
       </div>
     </div>
   </div>
 </div>
+
